  - Fixed Wrong Tech Bonus names. Now they show where the bonusses have been earned
  - Fixed German Modernise Equipment decision not giving random rewards
  - Fixed a Belarusian focus being hidden behind the "Church Reforms" focus
  - Fixed a Lichtenstein bug where you would get scammed out of 3.5 billion
  - Fixed Iraqi civil war tags not being properly setup on release

 Content:
  - [RAJ] Added new Naxalite-Maoist insurgency mechanics (Issue #330)
    - New focus: Counter-Insurgency Operations in military branch
    - New decisions: Integrated Development Initiative, Surrender & Rehabilitation Program
    - New decisions: Operation Green Hunt (unlocks after 2009), SAMADHAN Doctrine (unlocks after 2017)
    - New decisions: Salwa Judum (2005-2011), Red Corridor Road Connectivity
    - 9 new events: PWG-MCC Merger, Major Maoist Attack, Mass Surrender, Leadership Elimination,
      Tribal Displacement Protests, Operation Green Hunt Success, Naxal-Free Milestone,
      Dantewada Ambush (2010), Sukma Attack (2017)
    - 5 new national ideas: Red Corridor Crisis, Operation Green Hunt Active, SAMADHAN Doctrine,
      Naxal-Free India, Salwa Judum Active
  - [NIG] Added Niger Delta Revolt content (Issue #381)
    - New focus branch: Military Solution / Address Niger Delta / Negotiate Peace paths
    - New focuses: NDDC Reform, Amnesty Program, Oil Revenue Sharing, Niger Delta Resolved
    - New decisions: Joint Task Force Operations, Negotiate with Militants, Implement Amnesty,
      Oil Revenue Sharing Agreement, Environmental Cleanup, Request International Mediation
    - 20+ new events: MEND Formation (2006), Oil Platform Attacks, Foreign Worker Kidnappings,
      Pipeline Sabotage, International Pressure, Presidential Amnesty Program (2009),
      Militants Surrender, Amnesty Failure, Niger Delta Avengers Emergence (2015-16),
      State of Emergency, Crisis Resolution
    - 10 new national ideas: Niger Delta Crisis (3 tiers), Amnesty Program, Failed Amnesty,