@@ -1305,7 +1305,7 @@ calculate_monthly_arab_spring_change = {
 		add_to_variable = { arab_spring_change = 2 }
 	}
 	else_if = { limit = { has_idea = widespread_corruption }
-		add_to_variable = { arab_spring_change = 2 }
+		add_to_variable = { arab_spring_change = 1 }
 	}
 	else_if = { limit = { has_idea = modest_corruption }
 		add_to_variable = { arab_spring_change = -1 }
@@ -1419,9 +1419,16 @@ calculate_monthly_arab_spring_change = {
 	}
 	else_if = {
 		limit = {
-			check_variable = { government_coalition_strength > 0.899 }
+			check_variable = { government_coalition_strength > 0.799 }
+			check_variable = { government_coalition_strength < 0.899 }
 		}
 		add_to_variable = { arab_spring_change = -4 }
+	}
+	else_if = {
+		limit = {
+			check_variable = { government_coalition_strength > 0.899 }
+		}
+		add_to_variable = { arab_spring_change = -5 }
 	}
 }
 
