@@ -240,7 +240,7 @@ defined_text = {
 	name = AS_government_popularity
 	text = {
 		trigger = {
-			check_variable = { government_coalition_strength <  0.500 }
+			check_variable = { government_coalition_strength < 0.500 }
 		}
 		localization_key = AS_government_popularity_1_tt
 	}
@@ -267,8 +267,15 @@ defined_text = {
 	}
 	text = {
 		trigger = {
-			check_variable = { government_coalition_strength > 0.899 }
+			check_variable = { government_coalition_strength > 0.799 }
+			check_variable = { government_coalition_strength < 0.899 }
 		}
 		localization_key = AS_government_popularity_5_tt
+	}
+	text = {
+		trigger = {
+			check_variable = { government_coalition_strength > 0.899 }
+		}
+		localization_key = AS_government_popularity_6_tt
 	}
 }
