@@ -67,8 +67,8 @@ country_event = {
 						tag = GER
 						tag = FRA
 						tag = POL
-						tag = IRQ
 					}
+					NOT = { tag = IRQ }
 				}
 				country_event = { id = wot.3 days = 1 }
 			}
