@@ -1110,7 +1110,7 @@
  protest_medium: "§YMedium§!"
  protest_high: "§RHigh§!"
 
- AS_factors_impacting_monthly_arab_spring_protest_strength: "\n\nFactors Currently Impacting Protest Strength:\n[AS_impact_of_corruption][AS_impact_of_current_internal_security][AS_impact_of_current_social_unrest][AS_impact_of_economic_situation][AS_impact_of_historical_context_on][AS_impact_of_shia_resistance][AS_impact_of_current_government_structure][AS_lack_of_internet_access][AS_impact_of_current_healthcare]"
+ AS_factors_impacting_monthly_arab_spring_protest_strength: "\n\nFactors Currently Impacting Protest Strength:\n[AS_impact_of_corruption][AS_impact_of_current_internal_security][AS_impact_of_current_social_unrest][AS_impact_of_economic_situation][AS_impact_of_historical_context_on][AS_impact_of_shia_resistance][AS_impact_of_current_government_structure][AS_lack_of_internet_access][AS_impact_of_current_healthcare][AS_government_popularity]"
  AS_impact_of_corruption_paralyzing_tt: "$paralyzing_corruption$ - §R+6§!\n"
  AS_impact_of_corruption_crippling_tt: "$crippling_corruption$ - §R+5§!\n"
  AS_impact_of_corruption_rampant_tt: "$rampant_corruption$ - §R+4§!\n"
@@ -1140,7 +1140,8 @@
  AS_government_popularity_2_tt: "Government Popularity Greater Than 50% & Less Than 60% - §G-1§!\n"
  AS_government_popularity_3_tt: "Government Popularity Greater Than 60% & Less Than 70% - §G-2§!\n"
  AS_government_popularity_4_tt: "Government Popularity Greater Than 70% & Less Than 80% - §G-3§!\n"
- AS_government_popularity_5_tt: "Government Popularity Greater Than 90% - §G-4§!\n"
+ AS_government_popularity_5_tt: "Government Popularity Greater Than 80% & Less Than 90% - §G-4§!\n"
+ AS_government_popularity_6_tt: "Government Popularity Greater Than 90% - §G-5§!\n"
 
  AS_impact_of_economic_situation_depression_tt: "$depression$ & GDP/C Less Than $15000 - §R+6§!\n"
  AS_impact_of_economic_situation_recession_tt: "$recession$ & GDP/C Less Than 15 - §R+4§!\n"
