@@ -1703,7 +1703,7 @@
 
  # Systems Update
  systems.1.t: "Welcome to Millennium Dawn"
- systems.1.d: "Welcome to Millennium Dawn! Thank you for downloading and playing the mod. If you're new, we recommend exploring the various menus to familiarize yourself with the features. Menus typically can be opened via buttons at the top of the various screens Need help? Join our Discord community where we're happy to assist you with any questions or issues. You can report bugs in-game using \"Report An Issue\" in the pause menu or through our Discord channels.\n\nImportant Information:\n- Fuel is negative on game start due to power plants. Look at the Energy UI in the Construction Menu for more details."
+ systems.1.d: "Welcome to Millennium Dawn! Thank you for downloading and playing the mod. If you're new, we recommend exploring the various menus to familiarize yourself with the features. Menus typically can be opened via buttons at the top of the various screens Need help? Join our Discord community where we're happy to assist you with any questions or issues. You can report bugs in-game using \"Report An Issue\" in the pause menu or through our Discord channels.\n\nImportant Information:\n- Fuel is negative on game start due to power plants and population consumption. Look at the Energy UI in the Construction Menu for more details."
  systems.1.a: "Okay."
 
  #Libya
