@@ -315,6 +315,8 @@ v2.0.0
   - Fixed a Belarusian focus being hidden behind the "Church Reforms" focus
   - Fixed a Lichtenstein bug where you would get scammed out of 3.5 billion
   - Fixed Iraqi civil war tags not being properly setup on release
+  - Iraq can no longer vote to join the invasion against itself in the post 9/11 content
+  - Fixed a display issue with the Arab Spring not showing you the government popularity impact on the growth of the Arab Spring
 
  Content:
   - [RAJ] Added new Naxalite-Maoist insurgency mechanics (Issue #330)
